--- a/gb/23/2/15/n13930600.md
+++ b/gb/23/2/15/n13930600.md
@@ -34,31 +34,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/29/n10939788.md#1" target="_blank">共产暴政录：湖南道县大屠杀</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/22/n11674273.md#1" target="_blank">身心俱悴时喜遇大法 印度母亲人生现转机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/20/n9870365.md#1" target="_blank">林辉：文革第一禁书作者曾被内定死刑</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2095376.md#1" target="_blank">法轮功中南海事件真相揭秘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924979.md#1">【未解之谜】风水高人揭秘：富贵的秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928876.md#1">同日出生死亡的缅甸夫妇转生双胞胎 再续前缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927307.md#1">【未解之谜】改命用错招 预言大师难逃宿命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923582.md#1">【人生之钥】科举落第的读书人 意外当了皇帝的老师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927497.md#1">中共是贼  中华是国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930479.md#1">【新闻大家谈】中共一号文件透露饥与贫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930492.md#1">【时事金扫描】古今中外真假“情人节”大观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13929898.md#1">【中国禁闻】中共反控美国气球入侵 专家：搅浑水</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928422.md#1">王友群：习近平保一家老小性命安全怎么保？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928606.md#1">消息：中方就气球事件发声明 得到习首肯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928902.md#1">东莞发生凶杀案 一男子捅倒多人 现场惨烈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929153.md#1">大陆演员李嘉明无戏可拍 回老家摆摊卖炒面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/12/n13928300.md#1">与周星驰“王不见王”？梁朝伟述2人真实交情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929798.md#1">邓超情人节送妻一盆菜 孙俪直呼“深得我心”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13929190.md#1">《满江红》香港票房惨淡 3天仅卖5万多港币</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928773.md#1">林志颖术后首次公开复工 自揭状态“还不错”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928807.md#1">意大利奇景：上下颠倒的无花果树</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906326.md#1">痴呆症不可逆？资深医师：1方法可延迟或预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926699.md#1">另类观光胜地 地穴能量强大的台北南港公园</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/14/n13929476.md#1">住旅馆怕偷拍？ 空姐教你找出隐藏式摄影机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928566.md#1">情人节送花 原来还有这些讲究</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065489.md#1">【新闻看点】习近平真怒了？拜登这锤太重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065399.md#1">【未解之谜】命中注定爱上你？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065492.md#1">【新闻大破解】英力挺台湾 六国军舰将穿台海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064875.md#1">【菁英论坛】习防暗杀人心惶惶 传李强想辞职</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064774.md#1">中共国防部回应魏凤和等下落 官网删相关内容</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064502.md#1">消息：习近平可能不会出席G20峰会</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064267.md#1">因嫖娼遭封杀 李云迪首现身国外街头喝咖啡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064222.md#1">曝《好声音》2学员挺李玟后消失 甄妮表担忧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064302.md#1">遭《好声音》黑料波及 那英澳门演唱会延期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064909.md#1">大马监制李建兴证实《好声音》导师转身价码</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060476.md#1">断食可损伤刺突蛋白 对抗阿尔茨海默病和癌症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063925.md#1">飞行员告诫飞机乘客守规矩 这么做恐遭禁飞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063138.md#1">【美食天堂】油条家庭做法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064562.md#1">花椰菜上有黑色斑点 吃起来安全吗？</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/15/n13930600.htm">美众院委员会发传票 要科企提供内容审核信息</a></p><hr>
