--- a/gb/23/2/24/n13937449.md
+++ b/gb/23/2/24/n13937449.md
@@ -35,31 +35,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/20/n10319814.md#1" target="_blank">裴毅然：重庆谈判真相——破裂主责在“共”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977994.md#1" target="_blank">林辉：一篇文章惹毛动怒 民间顾准拒辱自尽</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11405877.md#1" target="_blank">组图：反迫害20年 澳纽法轮功呼唤正义良知</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942716.md#1">【未解之谜】从破案到预言 为什么梦如此神奇？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923681.md#1">【古道人生】洗衣妇原来是武林高手 巧惩恶吏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945956.md#1">【中国禁闻】习近平罕见点名批美 两国更对立？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946008.md#1">【热点互动】投资印度 郭台铭再战2024大选？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946409.md#1">【有冇搞错】格局决定上限 中央计划不出创新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944711.md#1">习罕见批李克强？习李暗战三个细节引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944563.md#1">【秦鹏观察】GDP目标加“左右” 李克强泄密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944827.md#1">中共公布国务院机构重组方案 暂未涉公安国安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944500.md#1">老演员李琦京城摆摊卖烤肉 50元一串引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944672.md#1">心疼詹雅雯将3度开脑 大S具俊瞱与小S献花送暖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944433.md#1">孙俪大提琴考级试 自嘲紧张得脸红 网友笑翻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13945104.md#1">两巨星隔空联动 周星驰喊话周杰伦“香港见”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944565.md#1">修杰楷40岁生日 贾静雯晒合照甜蜜告白</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943029.md#1">高度加工食物成瘾罹癌更致命 专家：3个方法戒断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928982.md#1">抗癌延寿作用强大 石榴这样吃最有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943990.md#1">自然疗愈！照着步骤做 有望改善身体健康</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943910.md#1">微不足道的小善利己利人 让自己更幸福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944320.md#1">都是早餐 爱尔兰全餐与英式的有何不同？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065489.md#1">【新闻看点】习近平真怒了？拜登这锤太重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065399.md#1">【未解之谜】命中注定爱上你？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065492.md#1">【新闻大破解】英力挺台湾 六国军舰将穿台海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064875.md#1">【菁英论坛】习防暗杀人心惶惶 传李强想辞职</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064774.md#1">中共国防部回应魏凤和等下落 官网删相关内容</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064502.md#1">消息：习近平可能不会出席G20峰会</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064267.md#1">因嫖娼遭封杀 李云迪首现身国外街头喝咖啡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064222.md#1">曝《好声音》2学员挺李玟后消失 甄妮表担忧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064302.md#1">遭《好声音》黑料波及 那英澳门演唱会延期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064909.md#1">大马监制李建兴证实《好声音》导师转身价码</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060476.md#1">断食可损伤刺突蛋白 对抗阿尔茨海默病和癌症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063925.md#1">飞行员告诫飞机乘客守规矩 这么做恐遭禁飞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063138.md#1">【美食天堂】油条家庭做法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064562.md#1">花椰菜上有黑色斑点 吃起来安全吗？</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/24/n13937449.htm">组图：冬季风暴袭美 多州遭遇强风及大雪</a></p><hr>
