--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -114,14 +114,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053956.md#1">【更新】乔州选举案 川普等被指控41项罪名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065850.md#1">美驻日大使访福岛 吃海鲜 支持日本</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065751.md#1">程翔：认识中共的隐蔽战线（1）——内外交困 煽动全民反间谍</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065738.md#1">“永不忘记 永不原谅”金山湾区港人纪念8?31事件四周年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065713.md#1">曾当过兵的“粉红”青年 冒死走线美国（二）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/31/n10010812.md#1" target="_blank">文武：反封建“等级制度”是典型的党文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/20/n11600972.md#1" target="_blank">【历史回眸】赵紫阳赞港英统治模式和蒋经国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
