--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -121,7 +121,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/20/n11600972.md#1" target="_blank">【历史回眸】赵紫阳赞港英统治模式和蒋经国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992365.md#1" target="_blank">殷毅：我在右派专列上</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
