--- a/gb/20/3/13/n11939189.md
+++ b/gb/20/3/13/n11939189.md
@@ -48,7 +48,7 @@
 </p>
 <p>&nbsp;</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">A message from <ahref="https://twitter.com/spidadmitchell?ref_src=twsrc%5Etfw">@spidadmitchell</a> <ahref="https://t.co/YtChd3eNng"></a><a href="https://ddtx9y1vir8bp.cloudfront.net/O7niBS7wg"><img width="600" src="https://raw.githubusercontent.com/19920513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="YtChd3eNng</a></p>
+<p dir="ltr" lang="en">A message from <ahref="https://twitter.com/spidadmitchell?ref_src=twsrc%5Etfw">@spidadmitchell</a> <ahref="https://t.co/YtChd3eNng"></a><a href="https://d3cacbcgqcawbc.cloudfront.net/N1jiBS7wa"><img width="600" src="https://raw.githubusercontent.com/19920513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="YtChd3eNng</a></p>
 <p>— NBA (@NBA) <ahref="https://twitter.com/NBA/status/1238886687444471810?ref_src=twsrc%5Etfw">March 14, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>&nbsp;</p>
@@ -77,7 +77,7 @@
 </p>
 <p>&nbsp;</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">Madrid lockdown latest: At 10pm there was a citywide ovation for the health workers on the front line of this. Here’s how it sounded on our block. <ahref="https://t.co/Vvik9KMvWh"></a><a href="https://ddtx9y1vir8bp.cloudfront.net/O7niBS7wg"><img width="600" src="https://raw.githubusercontent.com/19920513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="Vvik9KMvWh</a></p>
+<p dir="ltr" lang="en">Madrid lockdown latest: At 10pm there was a citywide ovation for the health workers on the front line of this. Here’s how it sounded on our block. <ahref="https://t.co/Vvik9KMvWh"></a><a href="https://d3cacbcgqcawbc.cloudfront.net/N1jiBS7wa"><img width="600" src="https://raw.githubusercontent.com/19920513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="Vvik9KMvWh</a></p>
 <p>— Stephen Phelan (@hyperphelan) <ahref="https://twitter.com/hyperphelan/status/1238934238453534720?ref_src=twsrc%5Etfw">March 14, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>&nbsp;</p>
@@ -458,7 +458,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/27/n9996650.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/11/13/n2327659.md#1" target="_blank">法轮功简介</a></li><hr>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498401.md#1" target="_blank">孙盛起：撒旦横行，圣婴只能死去</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li><hr>
 
 
 <strong>热门新闻：</strong>
